k8s/apps/external-dns-cloudflare/ciliumnetworkpolicy-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-dns-cloudflare-egress
  namespace: external-dns-cloudflare
spec:
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
    - toCIDRSet:
        - cidr: 0.0.0.0/0
          except:
            - 0.0.0.0/8
            - 10.0.0.0/8
            - 100.64.0.0/10
            - 127.0.0.0/8
            - 169.254.0.0/16
            - 172.16.0.0/12
            - 192.0.0.0/24
            - 192.0.2.0/24
            - 192.168.0.0/16
            - 198.18.0.0/15
            - 198.51.100.0/24
            - 203.0.113.0/24
            - 224.0.0.0/4
            - 240.0.0.0/4
        - cidr: ::/0
          except:
            - ::/128
            - ::1/128
            - 64:ff9b::/96
            - 100::/64
            - 2001:db8::/32
            - fc00::/7
            - fe80::/10
            - ff00::/8
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/instance: external-dns-cloudflare
      k8s:app.kubernetes.io/name: external-dns
